# btnx-config

./: AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  README.md  aclocal.m4  config.h.in  configure  configure.ac
data/: btnx-config.desktop.template  btnx-config.glade
doc/: Makefile.am  Makefile.in  xmldocs.make
doc/btnx-manual/: Makefile.am  Makefile.in
doc/btnx-manual/C/: Makefile.am  Makefile.in  btnx-manual-C.omf  btnx-manual-C.omf.out  btnx-manual.xml  legal.xml
po/: LINGUAS  Makevars  POTFILES.in  btnx-config.pot  de.gmo  de.po  fr.gmo  fr.po  nl.gmo  nl.po  ru.gmo  ru.po
scripts/: install.sh  uninstall.sh
src/: Makefile.am  Makefile.in  backup.c  backup.h  btnd.c  btnd.h  btnx_config.c  buttons.c  buttons.h  callbacks.h  callbacks_btnd.c  callbacks_config.c  callbacks_moused.c  common.h  config.c  config.h  config_file.c  config_file.h  config_manager.c  config_manager.h  detect_button.c  dialog_btnd.c  dialog_btnd.h  handlers.c  handlers.h  help.c  help.h  ip_pipe.c  ip_pipe.h  keycodes.c  keycodes.h  keycodes_entry.c  keycodes_entry.h  mouse.c  mouse.h  moused.c  moused.h  rawcodes.c  rawcodes.h  revoco.c  (+16 more)
